crates/ars-components/src/input/pin_input/snapshots/ars_components__input__pin_input__tests__pin_input_hidden_input_snapshot.snap
---
source: crates/ars-components/src/input/pin_input/mod.rs
expression: snapshot_attrs(&api.hidden_input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "pin-input",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Form,
            String(
                "login",
            ),
        ),
        (
            Name,
            String(
                "pin",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "hidden",
            ),
        ),
        (
            Value,
            String(
                "1234",
            ),
        ),
    ],
    styles: [],
}
