crates/ars-components/src/input/pin_input/snapshots/ars_components__input__pin_input__tests__pin_input_root_completed_snapshot.snap
---
source: crates/ars-components/src/input/pin_input/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "pin-input",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "completed",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "pin-label",
            ),
        ),
        (
            Id,
            String(
                "pin",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
